created poc level

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/two.js/0.8.10/two.js"></script>
   </head>
   <body>
+    <h2>Space = Jump with lower body. LShift = Jump with upper body.<br>Hold LShift to grab ceilings.</h2>
     <script src="app.js"></script>
   </body>
 </html>
